--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:static": "ng build --configuration=production --base-href=/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:FrontendDevelepers": "node dist/frontend-develepers/server/server.mjs"
